; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/appshim/extr_layer_hooks.c_safe_str.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/appshim/extr_layer_hooks.c_safe_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@safe_str.buffer = internal global [2 x [30 x i8]] zeroinitializer, align 16
@safe_str.index = internal global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"#%Id\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @safe_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @safe_str(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i64 @HIWORD(i8* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i8*, i8** %3, align 8
  store i8* %8, i8** %2, align 8
  br label %28

9:                                                ; preds = %1
  %10 = load i32, i32* @safe_str.index, align 4
  %11 = xor i32 %10, 1
  store i32 %11, i32* @safe_str.index, align 4
  %12 = load i32, i32* @safe_str.index, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds [2 x [30 x i8]], [2 x [30 x i8]]* @safe_str.buffer, i64 0, i64 %13
  %15 = getelementptr inbounds [30 x i8], [30 x i8]* %14, i64 0, i64 0
  %16 = load i32, i32* @safe_str.index, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds [2 x [30 x i8]], [2 x [30 x i8]]* @safe_str.buffer, i64 0, i64 %17
  %19 = getelementptr inbounds [30 x i8], [30 x i8]* %18, i64 0, i64 0
  %20 = call i32 @_countof(i8* %19)
  %21 = load i8*, i8** %3, align 8
  %22 = ptrtoint i8* %21 to i64
  %23 = call i32 @StringCchPrintfA(i8* %15, i32 %20, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i64 %22)
  %24 = load i32, i32* @safe_str.index, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds [2 x [30 x i8]], [2 x [30 x i8]]* @safe_str.buffer, i64 0, i64 %25
  %27 = getelementptr inbounds [30 x i8], [30 x i8]* %26, i64 0, i64 0
  store i8* %27, i8** %2, align 8
  br label %28

28:                                               ; preds = %9, %7
  %29 = load i8*, i8** %2, align 8
  ret i8* %29
}

declare dso_local i64 @HIWORD(i8*) #1

declare dso_local i32 @StringCchPrintfA(i8*, i32, i8*, i64) #1

declare dso_local i32 @_countof(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
